fix(ui): adjust profile menu link margin for better alignment

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -171,7 +171,7 @@ header {
               color: #431fa7;
               font-weight: 600;
               font-size: 16px;
-              margin: 0px 0px 0px 18px;
+              margin: 0px 0px 0px 6px;
               cursor: pointer;
               &:hover {
                 text-decoration: underline;
@@ -512,7 +512,6 @@ header {
 @media (max-width: 1250px) {
   header {
     .header-content {
-
       .header-links {
         gap: 24px;
       }
